# efi-agent

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-image.yml
src/efi_agent/: api_client.py  cli.py  main.py  move_out.py  push.py  task_manager.py
src/efi_agent/core/: api_client.py  config.py  epic_client.py  task_manager.py
