[project]
name = "efi-agent"
version = "0.1.0"
description = "Register PIDs according to the AVefi schema"
authors = [
    {name = "AVefi Working Group", email = "contact@av-efi.net"},
]
repository = "https://github.com/AV-EFI/efi-agent"
documentation = "https://github.com/AV-EFI/efi-agent"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "avefi_schema @ git+https://github.com/AV-EFI/av-efi-schema.git",
    "appdirs>=1.4.4",
    "click>=8.1.7",
    "pyyaml>=6.0.2",
    "httpx>=0.28.1",
]

[project.scripts]
efi-agent = "efi_agent.main:cli_main"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"
