[project]
name = "efi-agent"
version = "0.1.0"
description = "Register PIDs according to the AVefi schema"
authors = [
    {name = "AVefi Working Group", email = "contact@av-efi.net"},
]
repository = "https://github.com/AV-EFI/efi-agent"
documentation = "https://github.com/AV-EFI/efi-agent"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "avefi_schema @ git+https://github.com/AV-EFI/av-efi-schema.git",
    "click>=8.1.7",
    "httpx[http2]>=0.28.1",
    "pydantic-settings>=2.14.0",
]

[project.scripts]
efi-agent = "efi_agent.main:cli_main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
